<resources>
    <string name="app_name">Go Sky</string>

    <string name="title_home">Home</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_message">Let’s book your flight, %1$s!</string>
    <string name="bearer_token">Bearer %1$s</string>

    <string name="from_to_to">%1$s to %2$s</string>
    <string name="total_amount">Total: %1$s</string>
    <plurals name="total_earnings">
        <item quantity="one">Total earnings of %d transaction</item>
        <item quantity="other">Total earnings of %d transactions</item>
    </plurals>

    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="add_image"><u>Add image</u></string>
    <string name="delete_image"><u>Delete image</u></string>
    <string name="title_history">History</string>
    <string name="profile_image">Profile Image</string>
    <string name="account_settings">Account settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reset_password">Reset Password</string>
    <string name="preferences">Preferences</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="others">Others</string>
    <string name="about_gosky">About GoSky</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
    <string name="account">Account</string>
    <string name="departure">Departure</string>
    <string name="detail">Detail</string>
    <string name="city_1">Jakarta</string>
    <string name="city_2">Batam</string>
    <string name="operated_by">Operated By:</string>
    <string name="lion_air">Lion Air</string>
    <string name="flight_number">JT-531</string>
    <string name="description">Description</string>
    <string name="text_1">Luar biasanya, maskapai ini mematok harga yang relatif lebih murah daripada penerbangan maskapai lainnya.</string>
    <string name="amount">Amount</string>
    <string name="_1">1</string>
    <string name="order">Order</string>
    <string name="mon_6_mar_2022">Mon, 6 Mar 2022</string>
    <string name="return_1">Return</string>
    <string name="your_flight_choice">Your Flight Choice</string>
    <string name="min">min</string>
    <string name="plus">plus</string>
    <string name="image_return">image_return</string>
    <string name="image_departure">Image Departure</string>
    <string name="image_favorite">Image Favorite</string>
    <string name="icon_back">icon back</string>
    <string name="icon_notification">icon notification</string>
    <string name="your_order_detail">Your Order Detail</string>
    <string name="order_detail">Order Detail</string>
    <string name="order_by">Order by</string>
    <string name="order_date">Order date</string>
    <string name="booking_code">Booking code</string>
    <string name="total_price">Total price</string>
    <string name="ticket_detail_departure">Ticket Detail Departure</string>
    <string name="icon_favorite">Icon Favorite</string>
    <string name="ticket_detail_return">Ticket Detail Return</string>
    <string name="back_to_home">Back to home</string>

    <string name="insert_ticket_data">Insert Ticket Data</string>
    <string name="insert">Insert</string>
    <string name="image_profile">Image Profile</string>
    <string name="total_earnings">Total earnings</string>
    <string name="today">Today</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="from">From</string>
    <string name="jakarta">JAKARTA</string>
    <string name="to">To</string>
    <string name="surabaya">SURABAYA</string>
    <string name="round_trip">Round-trip?</string>
    <string name="departure_date">Departure Date</string>
    <string name="return_date">Return Date</string>
    <string name="search">Search</string>
    <string name="add_new_journey">Add New Journey</string>
    <string name="icon_swap">Icon Swap</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="term"><![CDATA[By creating an account you agree to the Terms \n& goSky Terms and Privacy Policy]]></string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="create_an_account"> Create an account</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="log_in_1">Log in</string>
    <string name="update_ticket_data">Update Ticket Data</string>
    <string name="detail_ticket">Detail Ticket</string>
    <string name="flight_number_1">Flight Number</string>
    <string name="flight_duration_in_minute">Flight Duration in Minute</string>
    <string name="price_in_rupiah">Price in Rupiah</string>
    <string name="description_1">Description</string>
    <string name="update">Update</string>
    <string name="edit_image">Edit Image</string>
    <string name="image_placeholder">Image Placeholder</string>
    <string name="image_plane">Image Plane</string>
    <string name="pax">/pax</string>
    <string name="delete">Delete</string>
    <string name="arrow_single">Arrow Single</string>
    <string name="icon_to">Icon to</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="app_logo">app logo</string>
    <string name="empty_wishlist">Empty Wishlist</string>
    <string name="no_flights_available">No flights available</string>
    <string name="empty_notification">Empty Notification</string>
    <string name="empty_notification_1">All notifications we send will appear here so you can see them easily at any time</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset">Enter minimum 6 characters password to reset your current password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="history_booking">History Booking</string>
    <string name="empty_history">Empty History</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_email_to_create_a_new_password">Enter your email to validate and create a new password</string>
    <string name="account_details">Account Details</string>
    <string name="account_owner_info">Account Owner Info</string>
    <string name="address">Address</string>
    <string name="email_amp_phone_number"><![CDATA[Email & Phone Number]]></string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="wishlist">Wishlist</string>
    <string name="icon_exit">Icon Exit</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="fill_in_the_otp_code_sent_to">Fill in the OTP code sent to:</string>
    <string name="send_new_otp_code">Send New OTP Code </string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="testing_crash">Testing Crash</string>
    <string name="title_gosky">GoSky</string>
    <string name="title_gosky_admin">GoSky Admin</string>
    <string name="_0">0</string>
    <string name="edit_airline_image">Edit Airline Image</string>
    <string name="detail_departure">Detail Departure</string>
    <string name="icon_from">Icon From</string>
    <string name="detail_return">Detail Return</string>

    <string-array name="province">
        <item>JAKARTA</item>
        <item>DENPASAR</item>
        <item>YOGYAKARTA</item>
        <item>SURABAYA</item>
        <item>MEDAN</item>
        <item>SOLO</item>
        <item>SEMARANG</item>
        <item>MAKASSAR</item>
        <item>PONTIANAK</item>
        <item>BANJARMASIN</item>
        <item>PALEMBANG</item>
        <item>BANDUNG</item>
        <item>JAYAPURA</item>
    </string-array>
</resources>
