<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".presentation.ui.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/blue_background"
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:background="@color/cerulean_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:paddingVertical="12dp"
            android:text="@string/account"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/fl_notification"
            style="?attr/actionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:focusable="true"
            android:animateLayoutChanges="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_account_title"
            app:layout_constraintTop_toTopOf="@id/tv_account_title">

            <ImageView
                android:id="@+id/iv_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_notifications" />

            <TextView
                android:id="@+id/tv_cart_badge"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|top"
                android:layout_marginEnd="-5dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/badge_background"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                tools:text="0"
                tools:visibility="visible"/>

        </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_profile"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="14dp"
                    android:contentDescription="@string/profile_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_profile_image"
                    app:layout_constraintTop_toTopOf="@id/iv_profile_image"
                    tools:text="Rahma Danu Sadewa" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/iv_profile_image"
                    app:layout_constraintStart_toStartOf="@id/tv_profile_name"
                    tools:text="testing@gmail.com" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_profile">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/account_settings" />

            <TextView
                android:id="@+id/tv_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:text="@string/edit_profile"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/tv_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:text="@string/reset_password"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_for_reset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/preferences" />

            <TextView
                android:id="@+id/tv_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:text="@string/notification"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_notification" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:text="@string/language"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_bahasa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/others" />

            <TextView
                android:id="@+id/tv_about_go_sky"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:text="@string/about_gosky"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_about" />

            <TextView
                android:id="@+id/tv_terms_and_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:text="@string/terms_conditions"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_contents" />

            <TextView
                android:id="@+id/tv_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:text="@string/privacy_policy"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_privasi" />


            <TextView
                android:id="@+id/tv_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="30dp"
                android:drawablePadding="20dp"
                android:text="@string/log_out"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_arrow_forward"
                app:drawableStartCompat="@drawable/ic_logout" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
