<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_background_bottomsheet">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/icon_exit"
        android:src="@drawable/ic_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/verify_your_email"
        android:textColor="@color/bright_sky_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fill_in_the_otp_code_sent_to"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:text="muhammadfarroos12@gmail.com" />


    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <EditText
            android:id="@+id/et_otp_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_otp_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_otp_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_otp_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_otp_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/et_otp_6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/round_back"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_verify">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_new_otp_code"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:text="(48d)" />

        <TextView
            android:id="@+id/tv_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textColor="#F44336"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cerulean_blue"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>
